<resources>
    <string name="app_name">ShotefPlus</string>
    <string name="firebaseLink">https://shotefplus-72799.firebaseio.com/Users/</string>
    <string name="storageLink">gs://shotefplus-72799.appspot.com/</string>
    <string name="customersLink">/Customers/</string>
    <string name="worksLink">/Works/</string>
    <string name="emailTemplateLink">/EmailTemplate/</string>
    <string name="expensesLink">/Expenses/</string>
    <string name="priceOfferLink">/PriceOffers/</string>
    <string name="receiptsLink">/Receipts/</string>

    <string name="dateFormatMonthBar">MMM | yyyy</string>
    <string name="dateFormat">yyyyMM</string>
    <string name="dateFormatFull">dd/MM/yyyy</string>

    <string name="yes">כן</string>
    <string name="no">לא</string>

    <!-- Intent Strings-->
    <string name="customerIdNum">customerIdNum</string>
    <string name="customerAddedIdNum">customerAddedIdNum</string>
    <string name="customerAddedName">customerAddedName</string>
    <string name="cbWorkDone">cbWorkDone</string>
    <string name="cbWorkCancelled">cbWorkCancelled</string>
    <string name="expenseIdNum">expenseIdNum</string>
    <string name="workIdNum">workIdNum</string>
    <string name="cbSent">cbSent</string>
    <string name="rbApproved">rbApproved</string>
    <string name="rbNotApproved">rbNotApproved</string>
    <string name="PriceOfferId">PriceOfferId</string>
    <string name="rbPaid">rbPaid</string>
    <string name="rbNotPaid">rbNotPaid</string>
    <string name="cbCash">cbCash</string>
    <string name="cbCheque">cbCheque</string>
    <string name="cbTrans">cbTrans</string>
    <string name="cbCredit">cbCredit</string>
    <string name="receiptIdNum">receiptIdNum</string>
    <string name="isFromStorage">isFromStorage</string>
    <string name="receiptPictureIdNum">receiptPictureIdNum</string>
    <string name="receiptNumIntent">receiptNum</string>



    <!-- Dialog -->
    <string name="connecting">מתחבר לשרת</string>
    <string name="loadMsg">טוען נתונים..</string>
    <string name="permissionMsg">בודק הרשאות..</string>
    <string name="wait">אנא המתן</string>
    <string name="waitConnecting">אנא המתן בזמן ההתחברות</string>
    <string name="saving">שומר נתונים..</string>


    <!-- DB Reference fields -->
    <string name="dueDateDB">dueDate</string>
    <string name="name">name</string>
    <string name="idNum">idNum</string>
    <string name="dateDB">date</string>
    <string name="dateReceiptDB">dateReceipt</string>

    <!-- Toast Msg -->
    <string name="signUpToast">רישום בוצע בהצלחה</string>
    <string name="signInToast">התחברות בוצעה בהצלחה</string>
    <string name="registrationErr">שגיאה בהתחברות</string>
    <string name="signOutOk">התנתקת מהמערכת בהצלחה</string>
    <string name="signout">התנתקות</string>
    <string name="signOutMsg">האם אתה בטוח כי ברצונך לצאת מהמערכת?</string>
    <string name="setEmail">אנא הכנס כתובת מייל</string>
    <string name="errorMsg">שגיאה: </string>
    <string name="allowPermissionMsg">אנא אפשר הרשאות התקשרות</string>
    <string name="waitForPermission">אנא המתן בזמן קבלת הרשאות..</string>
    <string name="noEmailClients">אין תוכנות מותקנות לשליחת מיילים</string>
    <string name="chooseClientEmail">שלח מייל דרך...</string>
    <string name="customerUpdated">לקוח התעדכן</string>
    <string name="customerAdded">לקוח התווסף</string>
    <string name="requiredFieldsCustomers">יש למלא שדות חובה: שם עסק, טלפון, דואל</string>
    <string name="approveWorkDone">לא ניתן לאשר ביצוע עבודה שבוטלה</string>
    <string name="cancelWorkDone">לא ניתן לבטל עבודה שבוצעה</string>
    <string name="workIsCancelled">העבודה כבר מבוטלת</string>
    <string name="wantCancelWork">האם אתה בטוח כי ברצונך לבטל את העבודה?</string>
    <string name="errorWorkMsg">הוספת עבודה לרשימה</string>
    <string name="expenseUpdated">הוצאה התעדכנה</string>
    <string name="expenseAdded">הוצאה התווספה</string>
    <string name="requiredFieldsExpenses">יש למלא שדות חובה: תאריך, סכום</string>
    <string name="priceOfferIsApproved">הצעה אושרה בעבר</string>
    <string name="errorPOMsg">הוספת עבודה לרשימה</string>
    <string name="requiredFieldsPO">יש למלא שדות חובה: תאריך, סכום, פרטי עסקה</string>
    <string name="priceOfferAdded">הצעת מחיר התווספה</string>
    <string name="priceOfferUpdated">הצעת מחיר התעדכנה</string>
    <string name="picNotSave">לא נשמרה תמונה עבור קבלה זו</string>
    <string name="wantDeleteReceipt">האם אתה בטוח כי ברצונך למחוק קבלה זו?</string>
    <string name="receiptDeleted">הקבלה נמחקה</string>
    <string name="receiptUpdated">קבלה התעדכנה</string>
    <string name="receiptAdded">קבלה התווספה</string>
    <string name="choosePic">בחר תמונה..</string>
    <string name="requiredFieldsReceipt">יש למלא שדות חובה: תאריך, סכום, לקוח, עבודה</string>
    <string name="selectionMsg">לא בוצעה בחירה</string>
    <string name="priceOfferNotFound">לא נמצאו הצעות מחיר</string>
    <string name="workNotFound">לא נמצאו עבודות</string>
    <string name="receiptNotFound">לא נמצאו קבלות</string>
    <string name="expenseNotFound">לא נמצאו הוצאות</string>

<!-- Settings -->
    <string name="profileUpdateMsg">פרופיל התעדכן בהצלחה!</string>
    <string name="err1">מצטערים, משהו קרה :(</string>
    <string name="err2">אנא נסו שוב מאוחר יותר</string>
    <string name="registrationUpdateMsg">פרטי הרישום התעדכנו בהצלחה!</string>
    <string name="messageMsg">תוכן הודעה התעדכן בהצלחה!</string>
    <string name="emailMsg">תוכן אימייל התעדכן בהצלחה!</string>
    <string name="businessMsg">סוג עסק התעדכן בהצלחה!</string>
    <string name="dissmisedMsg">פרטי כניסה למערכת נמחקו ממכשיר זה</string>
<!--  -->
    <string name="pswrdMsg">אנא הכנס סיסמה קודמת</string>
    <string name="pswrdCorrectMsg">אנא הכנס סיסמה תקינה בעלת לפחות 6 תווים</string>

    <!-- Buttons-->
    <string name="signIn">התחבר</string>
    <string name="signUp">הרשם</string>
    <string name="insert">הוסף</string>
    <string name="sendPDF">שלח ללקוח כ PDF</string>
    <string name="sendMail">שלח ללקוח במייל ועדכן</string>
    <string name="doFilter">בצע סינון</string>
    <string name="cancel">ביטול</string>
    <string name="update">עדכן</string>
    <string name="approve">אישור</string>
    <string name="close">סגור</string>

    <!--Titles-->
    <string name="receipt">קבלות</string>
    <string name="insertReceipt">הוספת קבלה</string>
    <string name="priceOffers">הצעות מחיר</string>
    <string name="insertPriceOffer">הצעת מחיר</string>
    <string name="expenses">הוצאות</string>
    <string name="insertExpense">הוספת הוצאה</string>
    <string name="ShowReports">הצגת דוחות</string>
    <string name="GenerateReports">הפקת דוחות</string>
    <string name="settings">הגדרות</string>
    <string name="search">חיפוש</string>
    <string name="clean">ניקוי</string>
    <string name="searchResults">תוצאות חיפוש</string>
    <string name="signUpLabel">רישום למערכת</string>
    <string name="mainLabel">תפריט ראשי</string>
    <string name="customers">לקוחות</string>
    <string name="insertCustomer">הוספת לקוח</string>
    <string name="works">עבודות</string>
    <string name="userProfile">פרופיל משתמש</string>
    <string name="changeCredential">שינוי סיסמא ו/או דואל</string>
    <string name="msgTemplate">תבנית להודעה</string>
    <string name="mailTemplate">תבנית לדואל</string>
    <string name="about">אודות האפליקציה</string>
    <string name="connect">צור קשר</string>
    <string name="businessType">הגדרת עסק</string>
    <string name="PriceOfferToWork">העברת הצעת המחיר לביצוע</string>
    <string name="ReceiptImage">תצוגת קבלה</string>

    <!--Fields-->
    <string name="paymentType">צורת תשלום</string>
    <string name="paymentMethod">סוג תשלום</string>
    <string name="workNum">מספר עבודה</string>
    <string name="receiptNum">מספר קבלה</string>
    <string name="customer">לקוח</string>
    <string name="location">מיקום</string>
    <string name="quantity">כמות</string>
    <string name="date">תאריך</string>
    <string name="dateReceipt">תאריך קבלה</string>
    <string name="dueDate">תאריך יעד עבודה</string>
    <string name="sumExpense">סכום הוצאה</string>
    <string name="sumDetails">פרטי הוצאה</string>
    <string name="workDetails">פרטי העסקה</string>
    <string name="sumPayment">סהכ לתשלום</string>
    <string name="sumPaymentMaam">סהכ לתשלום כולל מעמ</string>
    <string name="paid">שולם</string>
    <string name="txtWorkStatus">שים לב - עבודה בוטלה</string>

    <string name="customerName">שם לקוח</string>
    <string name="contactName">שם איש קשר</string>
    <string name="phoneNum">מספר טלפון</string>
    <string name="email">דואל</string>
    <string name="adrs">כתובת</string>
    <string name="prvt">פרטי</string>
    <string name="business">עסק</string>

    <string name="strReceipt">מספר קבלה</string>
    <string name="notFound">לא הוכנס מלל</string>
    <string name="filter">סינון</string>
    <string name="noFilter">ללא סינון</string>


    <!-- Contact info-->
    <string name="connectTitle">אפליקציית שוטף פלוס</string>
    <string name="linkConnect">
        <a href="mailto:shotef.plus.app@gmail.com?Subject=Lost%20Password" target="_top">shotef.plus.app@gmail.com</a>
    </string>

    <!-- Customer Menu-->
    <string name="cCall">התקשר ללקוח</string>
    <string name="cSms">שלח הודעה ללקוח</string>
    <string name="cEmail">שלח דואל ללקוח</string>
    <string name="rDelete">מחק קבלה</string>
    <string name="rContact">צור קשר</string>
    <string name="rCustomer">עבור לאיש קשר</string>
    <string name="rPaidCash">סמן שולם מזומן</string>
    <string name="rPaidCredit">סמן שולם אשראי</string>
    <string name="rPaidTrans">סמן שולם העברה</string>
    <string name="rPaidCheque">סמן שולם המחאה</string>
    <string name="rReceipt">פתח קבלה</string>


    <!-- Work-->
    <string name="workDone">עבודה בוצעה</string>
    <string name="workCancelled">עבודה בוטלה</string>

    <!-- Price Offer -->
    <string name="priceOfferSent">נשלח ללקוח</string>
    <string name="priceOfferApproved">אושר לביצוע</string>
    <string name="priceOfferNotApproved">לא אושר לביצוע</string>
    <string name="customerNotSet">לא נבחר לקוח</string>

    <!-- Receipts  -->
    <string name="delete">מחיקה</string>

    <!-- Spinners Prompts -->
    <string name="promptWork">-בחר עבודה-</string>
    <string name="promptPaymentType">-בחר צורת תשלום-</string>
    <string name="promptMethodType">-בחר סוג תשלום-</string>
    <string name="promptCustomer">-בחר לקוח-</string>
    <string name="promptWorkExpenses">-בחר עבודה עם הוצאות-</string>
    <string name="promptPO">-בחר הצעת מחיר-</string>

    <!-- Spinners -->
    <string-array name="spinnerPaymentType">
        <item>-בחר צורת תשלום-</item>
        <item>מזומן</item>
        <item>אשראי</item>
        <item>המחאה</item>
        <item>העברה</item>
    </string-array>
    <string-array name="spinnerMethodType">
        <item>-בחר סוג תשלום-</item>
        <item>שוטף + 30</item>
        <item>שוטף + 60</item>
        <item>שוטף + 90</item>
        <item>שוטף + 120</item>
    </string-array>

    <string-array name="spinnerExpenseType">
        <item>-בחר צורת תשלום-</item>
        <item>מזומן</item>
        <item>אשראי</item>
        <item>המחאה</item>
        <item>העברה</item>
    </string-array>

    <string-array name="spinnerWork">
        <item>-בחר עבודה-</item>

    </string-array>

    <string-array name="spinnerCustomer">
        <item>-בחר לקוח-</item>

    </string-array>

    <string-array name="spinnerPriceOffer">
        <item>-בחר הצעת מחיר-</item>
    </string-array>

    <!--Toasts-->



    <!-- Firebase -->
    <string name="MainTable">Users</string>
    <string name="UserProfileTable">UserProfile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
