<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_receipt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="finals.shotefplus.activities.InsertReceiptActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/picSizeSignSmall"
        android:alpha="0.4"
        android:background="@drawable/receipt"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/picSizeSignSmall"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <EditText
            android:id="@+id/etReceiptNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiptNum"
            android:inputType="number"
            android:layout_weight="10"/>

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:layout_weight="10"/>

        <Spinner
            android:id="@+id/spnrCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerCustomer"
            android:prompt="@string/customer"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_weight="10">
        </Spinner>


        <Spinner
            android:id="@+id/spnrPaymentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerPaymentType"
            android:prompt="@string/paymentType"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_weight="10">
        </Spinner>

        <Spinner
            android:id="@+id/spnrWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerWork"
            android:prompt="@string/workNum"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_weight="10">
        </Spinner>

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workDetails"
            android:inputType="text"
            android:layout_weight="10"/>

        <EditText
            android:id="@+id/etSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sumPayment"
            android:inputType="number"
            android:layout_weight="10"/>

        <EditText
            android:id="@+id/etSumMaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sumPaymentMaam"
            android:inputType="number"
            android:layout_weight="10"/>


        <!--<DatePicker
            android:id="@+id/dpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:minDate="01/01/2000"
            android:maxDate="01/01/2018">

        </DatePicker>-->

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/stndrtBtnWidth"
            android:layout_height="@dimen/stndrtBtnHeight"
            android:layout_gravity="left"
            android:background="@color/colorSub"
            android:layout_marginBottom="@dimen/marginBtn"
            android:layout_marginLeft="@dimen/marginBtn"
            android:text="@string/insert"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_weight="10"/>

    </LinearLayout>


</RelativeLayout>
