<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_price_offer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="finals.shotefplus.activities.InsertPriceOfferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/picSizeSignSmall"
        android:alpha="0.4"
        android:background="@drawable/price_small"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/picSizeSignSmall"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/dueDate"
            android:maxLength="10" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/location"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBtn"
            android:layout_weight="8"
            android:weightSum="1"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/customer"
                android:inputType="text"
                android:gravity="bottom"
                />

            <ImageButton
                android:id="@+id/imgBtnCustomer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@android:color/transparent"
                android:src="@drawable/add_user2_32"
                android:gravity="bottom"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/workDetails"
            android:inputType="text" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/quantity"
            android:inputType="number" />

        <EditText
            android:id="@+id/etSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/sumPayment"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/cbSumMaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/sumPaymentMaam" />
        <!--<DatePicker
            android:id="@+id/dpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:minDate="01/01/2000"
            android:maxDate="01/01/2018">

        </DatePicker>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBtn"
            android:gravity="left"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btnSendPdf"
                android:layout_width="@dimen/stndrtBtnWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/marginBtn"
                android:background="@color/colorSub"
                android:text="@string/sendPDF"
                android:textAlignment="center"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="@dimen/stndrtBtnWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/marginBtn"
                android:background="@color/colorSub"
                android:text="@string/insert"
                android:textAlignment="center"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
