<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_price_offer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="finals.shotefplus.activities.InsertCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/picSizeSign"
        android:alpha="0.4"
        android:background="@drawable/customer"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/picSizeSign"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/customerName"
            android:inputType="text"
            android:maxLength="100"/>

        <EditText
            android:id="@+id/etContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/contactName"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/phoneNum"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/adrs"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/marginBtn"
            android:layout_weight="7"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbBsns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/summary"
                    android:hint="@string/business"
                    android:tag="business"
                    android:textColor="@color/summary"
                    android:textSize="@dimen/summary" />

                <RadioButton
                    android:id="@+id/rbPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/summary"
                    android:hint="@string/prvt"
                    android:tag="prvt"
                    android:textColor="@color/summary"
                    android:textSize="@dimen/summary" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBtn"
            android:gravity="left"
            android:orientation="horizontal"
            android:weightSum="7">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="@dimen/stndrtBtnWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/marginBtn"
                android:background="@color/colorSub"
                android:text="@string/insert"
                android:textAlignment="center"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
